--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -5,3 +5,4 @@ dataSource.password=
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.import_files=initial_data.sql
