--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -4,5 +4,5 @@ dataSource.username=sa
 dataSource.password=
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
 hibernate.hbm2ddl.import_files=initial_data.sql
