--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>OnlineBankingWebApp</artifactId>
     <packaging>war</packaging>
     <version>1.0.0</version>
-    <name>Spring MVC Application</name>
+    <name>OnlineBankingWebApp</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-version>1.8</java-version>
